  drivers and also set the main parameters (closes :issue:`166`).
  Thanks to Michal Slonina.

- Basic support for in-memory image files.  An HDF5 file can be set from or
  copied into a memory buffer (thanks to Michal Slonina).  This feature is
  only available if PyTables is built against HDF5 1.8.9 or newer.
  Closes :issue:`165` and :issue:`173`.


Deprecations
------------

- The use of upper-case keyword arguments in the :func:`openFile` function
  and the :class:`File` class initializer is now deprecated.  All parameters
  defined in the :file:`tables/parameters.py` module can still be passed as
  keyword argument to the :func:`openFile` function just using a lower-case
  version of the parameter name.


API changes
-----------

Many deprecated features and support for obsolete modules has been dropped:

- The deprecated :data:`is_pro` module constant has been removed

- The nra module and support for the obsolete numarray module has been removed.
  The *numarray* flavor is no more supported as well (closes :issue:`107`).

- Support for the obsolete Numeric module has been removed.
  The *numeric* flavor is no more available (closes :issue:`108`).

- The tables.netcdf3 module has been removed (closes :issue:`68`).

- The :data:`parameters.MAX_THREADS` configuration parameter has been dropped
  in favour of :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).

- The `__version__` module constants has been removed from almost all the
  modules (it was no ore used after the switch to Git).
  Of course the package level constant (:data:`tables.__version__`) still
  remains.  Closes :issue:`112`.


Bugs fixed
----------

- Better check access on closed files (closes: _issue:`62`)


Changes from 2.3.1 to 2.4
=========================

New features
------------

- Improved HDF5 error logging management:

  * added a new function, :func:`silenceHDF5Messages`, for suppressing